--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
     "sass": "^1.51.0",
     "styled-components": "^5.0.0",
